// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dark Nav List 1`] = `
<Nav
  className="test=nav-class"
  onSelect={[Function]}
  onToggle={[Function]}
  theme="dark"
>
  <nav
    aria-label="Global"
    className="pf-c-nav test=nav-class"
    data-ouia-component-id={3}
    data-ouia-component-type="PF4/Nav"
    data-ouia-safe={true}
  >
    <NavList
      ariaLeftScroll="Scroll left"
      ariaRightScroll="Scroll right"
      className="test-nav-list-class"
    >
      <ul
        className="pf-c-nav__list test-nav-list-class"
        onScroll={[Function]}
      >
        <NavItem
          className="test-nav-item-class"
          key="#link1"
          to="#link1"
        >
          <li
            className="pf-c-nav__item test-nav-item-class"
          >
            <a
              aria-current={null}
              className="pf-c-nav__link test-nav-item-class"
              href="#link1"
              onClick={[Function]}
            >
              Link 1
            </a>
          </li>
        </NavItem>
        <NavItem
          className="test-nav-item-class"
          key="#link2"
          to="#link2"
        >
          <li
            className="pf-c-nav__item test-nav-item-class"
          >
            <a
              aria-current={null}
              className="pf-c-nav__link test-nav-item-class"
              href="#link2"
              onClick={[Function]}
            >
              Link 2
            </a>
          </li>
        </NavItem>
        <NavItem
          className="test-nav-item-class"
          key="#link3"
          to="#link3"
        >
          <li
            className="pf-c-nav__item test-nav-item-class"
          >
            <a
              aria-current={null}
              className="pf-c-nav__link test-nav-item-class"
              href="#link3"
              onClick={[Function]}
            >
              Link 3
            </a>
          </li>
        </NavItem>
        <NavItem
          className="test-nav-item-class"
          key="#link4"
          to="#link4"
        >
          <li
            className="pf-c-nav__item test-nav-item-class"
          >
            <a
              aria-current={null}
              className="pf-c-nav__link test-nav-item-class"
              href="#link4"
              onClick={[Function]}
            >
              Link 4
            </a>
          </li>
        </NavItem>
      </ul>
    </NavList>
  </nav>
</Nav>
`;

exports[`Default Nav List - Trigger item active update 1`] = `
<Nav
  onSelect={[Function]}
  onToggle={[Function]}
  theme="dark"
>
  <nav
    aria-label="Global"
    className="pf-c-nav"
    data-ouia-component-id={5}
    data-ouia-component-type="PF4/Nav"
    data-ouia-safe={true}
  >
    <NavList
      ariaLeftScroll="Scroll left"
      ariaRightScroll="Scroll right"
    >
      <ul
        className="pf-c-nav__list"
        onScroll={[Function]}
      >
        <NavItem
          key="#link1"
          to="#link1"
        >
          <li
            className="pf-c-nav__item"
          >
            <a
              aria-current={null}
              className="pf-c-nav__link"
              href="#link1"
              onClick={[Function]}
            >
              Link 1
            </a>
          </li>
        </NavItem>
        <NavItem
          key="#link2"
          to="#link2"
        >
          <li
            className="pf-c-nav__item"
          >
            <a
              aria-current={null}
              className="pf-c-nav__link"
              href="#link2"
              onClick={[Function]}
            >
              Link 2
            </a>
          </li>
        </NavItem>
        <NavItem
          key="#link3"
          to="#link3"
        >
          <li
            className="pf-c-nav__item"
          >
            <a
              aria-current={null}
              className="pf-c-nav__link"
              href="#link3"
              onClick={[Function]}
            >
              Link 3
            </a>
          </li>
        </NavItem>
        <NavItem
          key="#link4"
          to="#link4"
        >
          <li
            className="pf-c-nav__item"
          >
            <a
              aria-current={null}
              className="pf-c-nav__link"
              href="#link4"
              onClick={[Function]}
            >
              Link 4
            </a>
          </li>
        </NavItem>
      </ul>
    </NavList>
  </nav>
</Nav>
`;

exports[`Default Nav List 1`] = `
<Nav
  className="test=nav-class"
  onSelect={[Function]}
  onToggle={[Function]}
  theme="dark"
>
  <nav
    aria-label="Global"
    className="pf-c-nav test=nav-class"
    data-ouia-component-id={1}
    data-ouia-component-type="PF4/Nav"
    data-ouia-safe={true}
  >
    <NavList
      ariaLeftScroll="Scroll left"
      ariaRightScroll="Scroll right"
      className="test-nav-list-class"
    >
      <ul
        className="pf-c-nav__list test-nav-list-class"
        onScroll={[Function]}
      >
        <NavItem
          className="test-nav-item-class"
          key="#link1"
          to="#link1"
        >
          <li
            className="pf-c-nav__item test-nav-item-class"
          >
            <a
              aria-current={null}
              className="pf-c-nav__link test-nav-item-class"
              href="#link1"
              onClick={[Function]}
            >
              Link 1
            </a>
          </li>
        </NavItem>
        <NavItem
          className="test-nav-item-class"
          key="#link2"
          to="#link2"
        >
          <li
            className="pf-c-nav__item test-nav-item-class"
          >
            <a
              aria-current={null}
              className="pf-c-nav__link test-nav-item-class"
              href="#link2"
              onClick={[Function]}
            >
              Link 2
            </a>
          </li>
        </NavItem>
        <NavItem
          className="test-nav-item-class"
          key="#link3"
          to="#link3"
        >
          <li
            className="pf-c-nav__item test-nav-item-class"
          >
            <a
              aria-current={null}
              className="pf-c-nav__link test-nav-item-class"
              href="#link3"
              onClick={[Function]}
            >
              Link 3
            </a>
          </li>
        </NavItem>
        <NavItem
          className="test-nav-item-class"
          key="#link4"
          to="#link4"
        >
          <li
            className="pf-c-nav__item test-nav-item-class"
          >
            <a
              aria-current={null}
              className="pf-c-nav__link test-nav-item-class"
              href="#link4"
              onClick={[Function]}
            >
              Link 4
            </a>
          </li>
        </NavItem>
      </ul>
    </NavList>
  </nav>
</Nav>
`;

exports[`Expandable Nav List - Trigger toggle 1`] = `
<Nav
  onSelect={[Function]}
  onToggle={[Function]}
  theme="dark"
>
  <nav
    aria-label="Global"
    className="pf-c-nav"
    data-ouia-component-id={11}
    data-ouia-component-type="PF4/Nav"
    data-ouia-safe={true}
  >
    <NavList
      ariaLeftScroll="Scroll left"
      ariaRightScroll="Scroll right"
    >
      <ul
        className="pf-c-nav__list"
        onScroll={[Function]}
      >
        <NavExpandable
          className="expandable-group"
          groupId={null}
          id="grp-1"
          isActive={false}
          isExpanded={true}
          srText=""
          title="Section 1"
        >
          <li
            className="pf-c-nav__item pf-m-expandable pf-m-expanded expandable-group"
            onClick={[Function]}
          >
            <a
              aria-expanded={true}
              className="pf-c-nav__link"
              href="#"
              id="grp-1"
              onClick={[Function]}
              onMouseDown={[Function]}
            >
              Section 1
              <span
                className="pf-c-nav__toggle"
              >
                <span
                  className="pf-c-nav__toggle-icon"
                >
                  <AngleRightIcon
                    aria-hidden="true"
                    color="currentColor"
                    noVerticalAlign={false}
                    size="sm"
                  >
                    <svg
                      aria-hidden="true"
                      aria-labelledby={null}
                      fill="currentColor"
                      height="1em"
                      role="img"
                      style={
                        Object {
                          "verticalAlign": "-0.125em",
                        }
                      }
                      viewBox="0 0 256 512"
                      width="1em"
                    >
                      <path
                        d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
                        transform=""
                      />
                    </svg>
                  </AngleRightIcon>
                </span>
              </span>
            </a>
            <section
              aria-labelledby="grp-1"
              className="pf-c-nav__subnav"
              hidden={null}
            >
              <ul
                className="pf-c-nav__list"
              >
                <NavItem
                  key="#link1"
                  to="#link1"
                >
                  <li
                    className="pf-c-nav__item"
                  >
                    <a
                      aria-current={null}
                      className="pf-c-nav__link"
                      href="#link1"
                      onClick={[Function]}
                    >
                      Link 1
                    </a>
                  </li>
                </NavItem>
                <NavItem
                  key="#link2"
                  to="#link2"
                >
                  <li
                    className="pf-c-nav__item"
                  >
                    <a
                      aria-current={null}
                      className="pf-c-nav__link"
                      href="#link2"
                      onClick={[Function]}
                    >
                      Link 2
                    </a>
                  </li>
                </NavItem>
                <NavItem
                  key="#link3"
                  to="#link3"
                >
                  <li
                    className="pf-c-nav__item"
                  >
                    <a
                      aria-current={null}
                      className="pf-c-nav__link"
                      href="#link3"
                      onClick={[Function]}
                    >
                      Link 3
                    </a>
                  </li>
                </NavItem>
                <NavItem
                  key="#link4"
                  to="#link4"
                >
                  <li
                    className="pf-c-nav__item"
                  >
                    <a
                      aria-current={null}
                      className="pf-c-nav__link"
                      href="#link4"
                      onClick={[Function]}
                    >
                      Link 4
                    </a>
                  </li>
                </NavItem>
              </ul>
            </section>
          </li>
        </NavExpandable>
      </ul>
    </NavList>
  </nav>
</Nav>
`;

exports[`Expandable Nav List 1`] = `
<Nav
  onSelect={[Function]}
  onToggle={[Function]}
  theme="dark"
>
  <nav
    aria-label="Global"
    className="pf-c-nav"
    data-ouia-component-id={9}
    data-ouia-component-type="PF4/Nav"
    data-ouia-safe={true}
  >
    <NavList
      ariaLeftScroll="Scroll left"
      ariaRightScroll="Scroll right"
    >
      <ul
        className="pf-c-nav__list"
        onScroll={[Function]}
      >
        <NavExpandable
          className=""
          groupId={null}
          id="grp-1"
          isActive={false}
          isExpanded={false}
          srText=""
          title="Section 1"
        >
          <li
            className="pf-c-nav__item pf-m-expandable"
            onClick={[Function]}
          >
            <a
              aria-expanded={false}
              className="pf-c-nav__link"
              href="#"
              id="grp-1"
              onClick={[Function]}
              onMouseDown={[Function]}
            >
              Section 1
              <span
                className="pf-c-nav__toggle"
              >
                <span
                  className="pf-c-nav__toggle-icon"
                >
                  <AngleRightIcon
                    aria-hidden="true"
                    color="currentColor"
                    noVerticalAlign={false}
                    size="sm"
                  >
                    <svg
                      aria-hidden="true"
                      aria-labelledby={null}
                      fill="currentColor"
                      height="1em"
                      role="img"
                      style={
                        Object {
                          "verticalAlign": "-0.125em",
                        }
                      }
                      viewBox="0 0 256 512"
                      width="1em"
                    >
                      <path
                        d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
                        transform=""
                      />
                    </svg>
                  </AngleRightIcon>
                </span>
              </span>
            </a>
            <section
              aria-labelledby="grp-1"
              className="pf-c-nav__subnav"
              hidden={true}
            >
              <ul
                className="pf-c-nav__list"
              >
                <NavItem
                  key="#link1"
                  to="#link1"
                >
                  <li
                    className="pf-c-nav__item"
                  >
                    <a
                      aria-current={null}
                      className="pf-c-nav__link"
                      href="#link1"
                      onClick={[Function]}
                    >
                      Link 1
                    </a>
                  </li>
                </NavItem>
                <NavItem
                  key="#link2"
                  to="#link2"
                >
                  <li
                    className="pf-c-nav__item"
                  >
                    <a
                      aria-current={null}
                      className="pf-c-nav__link"
                      href="#link2"
                      onClick={[Function]}
                    >
                      Link 2
                    </a>
                  </li>
                </NavItem>
                <NavItem
                  key="#link3"
                  to="#link3"
                >
                  <li
                    className="pf-c-nav__item"
                  >
                    <a
                      aria-current={null}
                      className="pf-c-nav__link"
                      href="#link3"
                      onClick={[Function]}
                    >
                      Link 3
                    </a>
                  </li>
                </NavItem>
                <NavItem
                  key="#link4"
                  to="#link4"
                >
                  <li
                    className="pf-c-nav__item"
                  >
                    <a
                      aria-current={null}
                      className="pf-c-nav__link"
                      href="#link4"
                      onClick={[Function]}
                    >
                      Link 4
                    </a>
                  </li>
                </NavItem>
              </ul>
            </section>
          </li>
        </NavExpandable>
      </ul>
    </NavList>
  </nav>
</Nav>
`;

exports[`Expandable Nav List with aria label 1`] = `
<Nav
  aria-label="Test"
  onSelect={[Function]}
  onToggle={[Function]}
  theme="dark"
>
  <nav
    aria-label="Local"
    className="pf-c-nav"
    data-ouia-component-id={13}
    data-ouia-component-type="PF4/Nav"
    data-ouia-safe={true}
  >
    <NavList
      ariaLeftScroll="Scroll left"
      ariaRightScroll="Scroll right"
    >
      <ul
        className="pf-c-nav__list"
        onScroll={[Function]}
      >
        <NavExpandable
          className=""
          groupId={null}
          id="grp-1"
          isActive={false}
          isExpanded={false}
          srText="Section 1 - Example sub-navigation"
          title="Section 1"
        >
          <li
            className="pf-c-nav__item pf-m-expandable"
            onClick={[Function]}
          >
            <a
              aria-expanded={false}
              className="pf-c-nav__link"
              href="#"
              id={null}
              onClick={[Function]}
              onMouseDown={[Function]}
            >
              Section 1
              <span
                className="pf-c-nav__toggle"
              >
                <span
                  className="pf-c-nav__toggle-icon"
                >
                  <AngleRightIcon
                    aria-hidden="true"
                    color="currentColor"
                    noVerticalAlign={false}
                    size="sm"
                  >
                    <svg
                      aria-hidden="true"
                      aria-labelledby={null}
                      fill="currentColor"
                      height="1em"
                      role="img"
                      style={
                        Object {
                          "verticalAlign": "-0.125em",
                        }
                      }
                      viewBox="0 0 256 512"
                      width="1em"
                    >
                      <path
                        d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
                        transform=""
                      />
                    </svg>
                  </AngleRightIcon>
                </span>
              </span>
            </a>
            <section
              aria-labelledby="grp-1"
              className="pf-c-nav__subnav"
              hidden={true}
            >
              <h2
                className="pf-u-screen-reader"
                id="grp-1"
              >
                Section 1 - Example sub-navigation
              </h2>
              <ul
                className="pf-c-nav__list"
              >
                <NavItem
                  key="#link1"
                  to="#link1"
                >
                  <li
                    className="pf-c-nav__item"
                  >
                    <a
                      aria-current={null}
                      className="pf-c-nav__link"
                      href="#link1"
                      onClick={[Function]}
                    >
                      Link 1
                    </a>
                  </li>
                </NavItem>
                <NavItem
                  key="#link2"
                  to="#link2"
                >
                  <li
                    className="pf-c-nav__item"
                  >
                    <a
                      aria-current={null}
                      className="pf-c-nav__link"
                      href="#link2"
                      onClick={[Function]}
                    >
                      Link 2
                    </a>
                  </li>
                </NavItem>
                <NavItem
                  key="#link3"
                  to="#link3"
                >
                  <li
                    className="pf-c-nav__item"
                  >
                    <a
                      aria-current={null}
                      className="pf-c-nav__link"
                      href="#link3"
                      onClick={[Function]}
                    >
                      Link 3
                    </a>
                  </li>
                </NavItem>
                <NavItem
                  key="#link4"
                  to="#link4"
                >
                  <li
                    className="pf-c-nav__item"
                  >
                    <a
                      aria-current={null}
                      className="pf-c-nav__link"
                      href="#link4"
                      onClick={[Function]}
                    >
                      Link 4
                    </a>
                  </li>
                </NavItem>
              </ul>
            </section>
          </li>
        </NavExpandable>
      </ul>
    </NavList>
  </nav>
</Nav>
`;

exports[`Horizontal Nav List 1`] = `
<Nav
  onSelect={[Function]}
  onToggle={[Function]}
  theme="dark"
>
  <nav
    aria-label="Global"
    className="pf-c-nav"
    data-ouia-component-id={17}
    data-ouia-component-type="PF4/Nav"
    data-ouia-safe={true}
  >
    <NavList
      ariaLeftScroll="Scroll left"
      ariaRightScroll="Scroll right"
      variant="horizontal"
    >
      <ul
        className="pf-c-nav__list"
        onScroll={[Function]}
        variant="horizontal"
      >
        <NavItem
          key="#link1"
          to="#link1"
        >
          <li
            className="pf-c-nav__item"
          >
            <a
              aria-current={null}
              className="pf-c-nav__link"
              href="#link1"
              onClick={[Function]}
            >
              Link 1
            </a>
          </li>
        </NavItem>
        <NavItem
          key="#link2"
          to="#link2"
        >
          <li
            className="pf-c-nav__item"
          >
            <a
              aria-current={null}
              className="pf-c-nav__link"
              href="#link2"
              onClick={[Function]}
            >
              Link 2
            </a>
          </li>
        </NavItem>
        <NavItem
          key="#link3"
          to="#link3"
        >
          <li
            className="pf-c-nav__item"
          >
            <a
              aria-current={null}
              className="pf-c-nav__link"
              href="#link3"
              onClick={[Function]}
            >
              Link 3
            </a>
          </li>
        </NavItem>
        <NavItem
          key="#link4"
          to="#link4"
        >
          <li
            className="pf-c-nav__item"
          >
            <a
              aria-current={null}
              className="pf-c-nav__link"
              href="#link4"
              onClick={[Function]}
            >
              Link 4
            </a>
          </li>
        </NavItem>
      </ul>
    </NavList>
  </nav>
</Nav>
`;

exports[`Nav Grouped List 1`] = `
<Nav
  onSelect={[Function]}
  onToggle={[Function]}
  theme="dark"
>
  <nav
    aria-label="Global"
    className="pf-c-nav"
    data-ouia-component-id={15}
    data-ouia-component-type="PF4/Nav"
    data-ouia-safe={true}
  >
    <NavGroup
      id="grp-1"
      title="Section 1"
    >
      <section
        aria-labelledby="grp-1"
        className="pf-c-nav__section"
      >
        <h2
          className="pf-c-nav__section-title"
          id="grp-1"
        >
          Section 1
        </h2>
        <ul>
          <NavList
            ariaLeftScroll="Scroll left"
            ariaRightScroll="Scroll right"
          >
            <ul
              className="pf-c-nav__list"
              onScroll={[Function]}
            >
              <NavItem
                key="section1_#link1"
                to="#link1"
              >
                <li
                  className="pf-c-nav__item"
                >
                  <a
                    aria-current={null}
                    className="pf-c-nav__link"
                    href="#link1"
                    onClick={[Function]}
                  >
                    Link 1
                  </a>
                </li>
              </NavItem>
              <NavItem
                key="section1_#link2"
                to="#link2"
              >
                <li
                  className="pf-c-nav__item"
                >
                  <a
                    aria-current={null}
                    className="pf-c-nav__link"
                    href="#link2"
                    onClick={[Function]}
                  >
                    Link 2
                  </a>
                </li>
              </NavItem>
              <NavItem
                key="section1_#link3"
                to="#link3"
              >
                <li
                  className="pf-c-nav__item"
                >
                  <a
                    aria-current={null}
                    className="pf-c-nav__link"
                    href="#link3"
                    onClick={[Function]}
                  >
                    Link 3
                  </a>
                </li>
              </NavItem>
              <NavItem
                key="section1_#link4"
                to="#link4"
              >
                <li
                  className="pf-c-nav__item"
                >
                  <a
                    aria-current={null}
                    className="pf-c-nav__link"
                    href="#link4"
                    onClick={[Function]}
                  >
                    Link 4
                  </a>
                </li>
              </NavItem>
            </ul>
          </NavList>
        </ul>
      </section>
    </NavGroup>
    <NavGroup
      id="grp-2"
      title="Section 2"
    >
      <section
        aria-labelledby="grp-2"
        className="pf-c-nav__section"
      >
        <h2
          className="pf-c-nav__section-title"
          id="grp-2"
        >
          Section 2
        </h2>
        <ul>
          <NavList
            ariaLeftScroll="Scroll left"
            ariaRightScroll="Scroll right"
          >
            <ul
              className="pf-c-nav__list"
              onScroll={[Function]}
            >
              <NavItem
                key="section2_#link1"
                to="#link1"
              >
                <li
                  className="pf-c-nav__item"
                >
                  <a
                    aria-current={null}
                    className="pf-c-nav__link"
                    href="#link1"
                    onClick={[Function]}
                  >
                    Link 1
                  </a>
                </li>
              </NavItem>
              <NavItem
                key="section2_#link2"
                to="#link2"
              >
                <li
                  className="pf-c-nav__item"
                >
                  <a
                    aria-current={null}
                    className="pf-c-nav__link"
                    href="#link2"
                    onClick={[Function]}
                  >
                    Link 2
                  </a>
                </li>
              </NavItem>
              <NavItem
                key="section2_#link3"
                to="#link3"
              >
                <li
                  className="pf-c-nav__item"
                >
                  <a
                    aria-current={null}
                    className="pf-c-nav__link"
                    href="#link3"
                    onClick={[Function]}
                  >
                    Link 3
                  </a>
                </li>
              </NavItem>
              <NavItem
                key="section2_#link4"
                to="#link4"
              >
                <li
                  className="pf-c-nav__item"
                >
                  <a
                    aria-current={null}
                    className="pf-c-nav__link"
                    href="#link4"
                    onClick={[Function]}
                  >
                    Link 4
                  </a>
                </li>
              </NavItem>
            </ul>
          </NavList>
        </ul>
      </section>
    </NavGroup>
  </nav>
</Nav>
`;

exports[`Nav List with custom item nodes 1`] = `
<Nav
  onSelect={[Function]}
  onToggle={[Function]}
  theme="dark"
>
  <nav
    aria-label="Global"
    className="pf-c-nav"
    data-ouia-component-id={21}
    data-ouia-component-type="PF4/Nav"
    data-ouia-safe={true}
  >
    <NavList
      ariaLeftScroll="Scroll left"
      ariaRightScroll="Scroll right"
      variant="tertiary"
    >
      <ul
        className="pf-c-nav__list"
        onScroll={[Function]}
        variant="tertiary"
      >
        <NavItem
          className="test-nav-item-class"
          to="/components/nav#link1"
        >
          <li
            className="pf-c-nav__item test-nav-item-class"
          >
            <div
              aria-current={null}
              className="pf-c-nav__link my-custom-node"
              onClick={[Function]}
            >
              My custom node
            </div>
          </li>
        </NavItem>
      </ul>
    </NavList>
  </nav>
</Nav>
`;

exports[`Simple Nav List 1`] = `
<Nav
  onSelect={[Function]}
  onToggle={[Function]}
  theme="dark"
>
  <nav
    aria-label="Global"
    className="pf-c-nav"
    data-ouia-component-id={7}
    data-ouia-component-type="PF4/Nav"
    data-ouia-safe={true}
  >
    <NavList
      ariaLeftScroll="Scroll left"
      ariaRightScroll="Scroll right"
      variant="simple"
    >
      <ul
        className="pf-c-nav__list"
        onScroll={[Function]}
        variant="simple"
      >
        <NavItem
          key="#link1"
          to="#link1"
        >
          <li
            className="pf-c-nav__item"
          >
            <a
              aria-current={null}
              className="pf-c-nav__link"
              href="#link1"
              onClick={[Function]}
            >
              Link 1
            </a>
          </li>
        </NavItem>
        <NavItem
          key="#link2"
          to="#link2"
        >
          <li
            className="pf-c-nav__item"
          >
            <a
              aria-current={null}
              className="pf-c-nav__link"
              href="#link2"
              onClick={[Function]}
            >
              Link 2
            </a>
          </li>
        </NavItem>
        <NavItem
          key="#link3"
          to="#link3"
        >
          <li
            className="pf-c-nav__item"
          >
            <a
              aria-current={null}
              className="pf-c-nav__link"
              href="#link3"
              onClick={[Function]}
            >
              Link 3
            </a>
          </li>
        </NavItem>
        <NavItem
          key="#link4"
          to="#link4"
        >
          <li
            className="pf-c-nav__item"
          >
            <a
              aria-current={null}
              className="pf-c-nav__link"
              href="#link4"
              onClick={[Function]}
            >
              Link 4
            </a>
          </li>
        </NavItem>
      </ul>
    </NavList>
  </nav>
</Nav>
`;

exports[`Tertiary Nav List 1`] = `
<Nav
  onSelect={[Function]}
  onToggle={[Function]}
  theme="dark"
>
  <nav
    aria-label="Global"
    className="pf-c-nav"
    data-ouia-component-id={19}
    data-ouia-component-type="PF4/Nav"
    data-ouia-safe={true}
  >
    <NavList
      ariaLeftScroll="Scroll left"
      ariaRightScroll="Scroll right"
      variant="tertiary"
    >
      <ul
        className="pf-c-nav__list"
        onScroll={[Function]}
        variant="tertiary"
      >
        <NavItem
          key="#link1"
          to="#link1"
        >
          <li
            className="pf-c-nav__item"
          >
            <a
              aria-current={null}
              className="pf-c-nav__link"
              href="#link1"
              onClick={[Function]}
            >
              Link 1
            </a>
          </li>
        </NavItem>
        <NavItem
          key="#link2"
          to="#link2"
        >
          <li
            className="pf-c-nav__item"
          >
            <a
              aria-current={null}
              className="pf-c-nav__link"
              href="#link2"
              onClick={[Function]}
            >
              Link 2
            </a>
          </li>
        </NavItem>
        <NavItem
          key="#link3"
          to="#link3"
        >
          <li
            className="pf-c-nav__item"
          >
            <a
              aria-current={null}
              className="pf-c-nav__link"
              href="#link3"
              onClick={[Function]}
            >
              Link 3
            </a>
          </li>
        </NavItem>
        <NavItem
          key="#link4"
          to="#link4"
        >
          <li
            className="pf-c-nav__item"
          >
            <a
              aria-current={null}
              className="pf-c-nav__link"
              href="#link4"
              onClick={[Function]}
            >
              Link 4
            </a>
          </li>
        </NavItem>
      </ul>
    </NavList>
  </nav>
</Nav>
`;
